📚 Auto-update: News data refreshed - 2025-12-30 04:32 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32774,5 +32774,13 @@
         "published": "Tue, 30 Dec 2025 02:30:53 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"2025 In Review, Lenskart\u2019s Big Wins &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-64.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Decoding 2025 For Consumer Tech Giants India\u2019s consumer-facing giants went through a year of reckoning in 2025. Hypergrowth gave way&#8230;"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/humanoid-robots-take-centre-stage-at-silicon-valley-summit-but-skepticism-remains/articleshow/126243384.cms",
+        "title": "Humanoid robots take centre stage at Silicon Valley summit, but scepticism remains",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/humanoid-robots-take-centre-stage-at-silicon-valley-summit-but-skepticism-remains/articleshow/126243384.cms",
+        "published": "Tue, 30 Dec 2025 09:08:51 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Humanoid robots are drawing renewed attention as advances in artificial intelligence revive long-held ambitions, though many experts remain sceptical about how soon they will become widely useful. While China has built strong momentum through funding and policy support, the US is seeing fresh investor interest driven by generative AI. Researchers say the technology is promising, but major technical challenges remain before humanoids become mainstream."
     }
 ]
