--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32782,5 +32782,13 @@
         "published": "Tue, 30 Dec 2025 09:08:51 +0530",
         "source": "Tech-Economic Times",
         "summary": "Humanoid robots are drawing renewed attention as advances in artificial intelligence revive long-held ambitions, though many experts remain sceptical about how soon they will become widely useful. While China has built strong momentum through funding and policy support, the US is seeing fresh investor interest driven by generative AI. Researchers say the technology is promising, but major technical challenges remain before humanoids become mainstream."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/samsung-wins-us-annual-approval-on-chipmaking-tool-shipments-to-china-source-says/articleshow/126243911.cms",
+        "title": "Samsung wins US annual approval on chipmaking tool shipments to China, source says",
+        "link": "https://economictimes.indiatimes.com/tech/technology/samsung-wins-us-annual-approval-on-chipmaking-tool-shipments-to-china-source-says/articleshow/126243911.cms",
+        "published": "Tue, 30 Dec 2025 09:57:02 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Samsung Electronics has secured a one-year US licence allowing chipmaking equipment shipments to its China plants in 2026. The move offers short-term certainty after Washington earlier withdrew long-standing waiver permissions for some technology firms. Officials have shifted to an annual approval system for sensitive chip tool exports to China."
     }
 ]
