--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32790,5 +32790,45 @@
         "published": "Tue, 30 Dec 2025 09:57:02 +0530",
         "source": "Tech-Economic Times",
         "summary": "Samsung Electronics has secured a one-year US licence allowing chipmaking equipment shipments to its China plants in 2026. The move offers short-term certainty after Washington earlier withdrew long-standing waiver permissions for some technology firms. Officials have shifted to an annual approval system for sensitive chip tool exports to China."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/meta-just-bought-manus-an-ai-startup-everyone-has-been-talking-about/",
+        "title": "Meta just bought Manus, an AI startup everyone has been talking about",
+        "link": "https://techcrunch.com/2025/12/29/meta-just-bought-manus-an-ai-startup-everyone-has-been-talking-about/",
+        "published": "Tue, 30 Dec 2025 05:39:08 +0000",
+        "source": "TechCrunch",
+        "summary": "Meta says it'll keep Manus running independently while weaving its agents into Facebook, Instagram, and WhatsApp, where Meta's own chatbot, Meta AI, is already available to users."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/catalysts/with-a-new-playbook-the-next-great-global-platform-can-be-built-from-india/articleshow/126244969.cms",
+        "title": "With a new playbook, the next great global platform can be built from India",
+        "link": "https://economictimes.indiatimes.com/tech/catalysts/with-a-new-playbook-the-next-great-global-platform-can-be-built-from-india/articleshow/126244969.cms",
+        "published": "Tue, 30 Dec 2025 11:14:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The AI era offers India a historic opportunity to emerge as the world\u2019s next innovation powerhouse."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-in-2025-25-milestones-including-mega-deals-bubble-fears-job-cuts-talent-wars-and-more/articleshow/126244497.cms",
+        "title": "AI in 2025: 25 milestones including mega deals, bubble fears, job cuts, talent wars and more",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-in-2025-25-milestones-including-mega-deals-bubble-fears-job-cuts-talent-wars-and-more/articleshow/126244497.cms",
+        "published": "Tue, 30 Dec 2025 11:05:30 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "In a transformative year, AI captured headlines with significant funding and elevated valuations for emerging startups. The existing tech behemoths strengthened their hold on the market through savvy acquisitions, intensifying the battle for top talent that drove up employee compensation but also led to considerable layoffs."
+    },
+    {
+        "id": "https://inc42.com/features/14-charts-that-defined-2025-for-indian-tech-startups/",
+        "title": "14 Charts That Defined 2025 For Indian Tech & Startups",
+        "link": "https://inc42.com/features/14-charts-that-defined-2025-for-indian-tech-startups/",
+        "published": "Tue, 30 Dec 2025 06:10:55 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"14 Charts That Defined 2025 For Indian Tech &amp; Startups\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-5-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />As 2025 unfolds, India\u2019s startup and digital economy story is no longer just about momentum \u2014 it is about magnitude.&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-rti-23-banks-mulehunter-mule-accounts/",
+        "title": "RTI Reveals 23 Banks Have Implemented Mulehunter.AI, But Total Mule Accounts Identified Still Not Disclosed",
+        "link": "https://www.medianama.com/2025/12/223-rti-23-banks-mulehunter-mule-accounts/",
+        "published": "Tue, 30 Dec 2025 05:54:43 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>An RTI response that MediaNama received from the Reserve Bank of India (RBI) divulged that 23 banks have implemented the MuleHunter.AI initiative. However, it did not disclose the number of mule accounts identified.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-rti-23-banks-mulehunter-mule-accounts/\">RTI Reveals 23 Banks Have Implemented Mulehunter.AI, But Total Mule Accounts Identified Still Not Disclosed</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a"
     }
 ]
