--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32830,5 +32830,37 @@
         "published": "Tue, 30 Dec 2025 05:54:43 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>An RTI response that MediaNama received from the Reserve Bank of India (RBI) divulged that 23 banks have implemented the MuleHunter.AI initiative. However, it did not disclose the number of mule accounts identified.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-rti-23-banks-mulehunter-mule-accounts/\">RTI Reveals 23 Banks Have Implemented Mulehunter.AI, But Total Mule Accounts Identified Still Not Disclosed</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/blinkit-cfo-vipin-kapooria-resigns-18-months-after-joining-quick-commerce-company/articleshow/126246391.cms",
+        "title": "Blinkit CFO Vipin Kapooria resigns 18 months after joining quick commerce company",
+        "link": "https://economictimes.indiatimes.com/tech/technology/blinkit-cfo-vipin-kapooria-resigns-18-months-after-joining-quick-commerce-company/articleshow/126246391.cms",
+        "published": "Tue, 30 Dec 2025 12:23:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Kapooria will return to Flipkart where he'll be taking on a senior finance position. This change is noteworthy as Blinkit navigates the cutthroat quick commerce environment, while Flipkart gears up for a public listing in the coming year."
+    },
+    {
+        "id": "https://inc42.com/buzz/ola-electric-gets-key-certification-for-4680-bharat-cell-powered-roadster-x/",
+        "title": "Ola Electric Gets Key Certification For 4680 Bharat Cell Powered Roadster X+",
+        "link": "https://inc42.com/buzz/ola-electric-gets-key-certification-for-4680-bharat-cell-powered-roadster-x/",
+        "published": "Tue, 30 Dec 2025 06:58:22 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Ola Electric Gets Key Certification For 4680 Bharat Cell Powered Roadster X+\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ola-electric-ebike-featured-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />EV maker Ola Electric said it has received government certification for its Roadster X+ (9.1 kWh) electric motorcycle powered by&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/indian-startups-in-2026-trends-predictions/",
+        "title": "Indian Startups In 2026: Trends & Predictions",
+        "link": "https://inc42.com/features/indian-startups-in-2026-trends-predictions/",
+        "published": "Tue, 30 Dec 2025 06:31:59 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Indian Startups In 2026: Trends &amp; Predictions\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-100-13.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />2025 was the transition year. 2026 will be the rebalancing year. That\u2019s Inc42\u2019s thesis for the upcoming year, where we&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-youtube-ai-trailer-takedowns-misleading-metadata/",
+        "title": "Explained: Why YouTube\u2019s AI Trailer Channel Takedowns Don\u2019t Solve the AI Slop or Copyright Problem",
+        "link": "https://www.medianama.com/2025/12/223-youtube-ai-trailer-takedowns-misleading-metadata/",
+        "published": "Tue, 30 Dec 2025 07:09:38 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>YouTube has shut down AI trailer channels citing misleading metadata, not copyright violations. The move exposes why platform enforcement alone cannot solve the growing AI slop problem.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-youtube-ai-trailer-takedowns-misleading-metadata/\">Explained: Why YouTube\u2019s AI Trailer Channel Takedowns Don\u2019t Solve the AI Slop or Copyright Problem</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
