📚 Auto-update: News data refreshed - 2025-12-30 08:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32862,5 +32862,29 @@
         "published": "Tue, 30 Dec 2025 07:09:38 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>YouTube has shut down AI trailer channels citing misleading metadata, not copyright violations. The move exposes why platform enforcement alone cannot solve the growing AI slop problem.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-youtube-ai-trailer-takedowns-misleading-metadata/\">Explained: Why YouTube\u2019s AI Trailer Channel Takedowns Don\u2019t Solve the AI Slop or Copyright Problem</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-makes-coding-skills-more-important/",
+        "title": "Why your coding skills are more essential than ever in the AI age",
+        "link": "https://www.zdnet.com/article/ai-makes-coding-skills-more-important/",
+        "published": "Tue, 30 Dec 2025 08:00:44 GMT",
+        "source": "Latest news",
+        "summary": "AI-generated code 'demands more rigorous verification, not less.'"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/2026-will-be-pivotal-to-ais-transition-from-discovery-to-diffusion-microsoft-ceo-satya-nadella/articleshow/126246925.cms",
+        "title": "2026 will be pivotal to AI\u2019s transition from discovery to diffusion: Microsoft CEO Satya Nadella",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/2026-will-be-pivotal-to-ais-transition-from-discovery-to-diffusion-microsoft-ceo-satya-nadella/articleshow/126246925.cms",
+        "published": "Tue, 30 Dec 2025 12:50:16 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Microsoft CEO Satya Nadella believes the coming year is crucial for artificial intelligence as it shifts from early discovery to broad use. Companies and societies will now discern real applications from hype. Nadella emphasizes AI as a tool to boost human potential, not replace it. Practical value will come from complex systems orchestrating AI models."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/ola-electric-certification-4680-bharat-cell-powered-roadster-x-bike",
+        "title": "Ola Electric receives certification for 4680 Bharat Cell powered Roadster X+ bike",
+        "link": "https://yourstory.com/2025/12/ola-electric-certification-4680-bharat-cell-powered-roadster-x-bike",
+        "published": "Tue, 30 Dec 2025 06:14:03 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The certification was issued after rigorous vehicle-level safety, electrical, performance, and environmental testing, as notified by the Ministry of Road Transport and Highways for certification of battery operated cehicles in the E2W category."
     }
 ]
