📚 Auto-update: News data refreshed - 2025-12-30 09:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32886,5 +32886,45 @@
         "published": "Tue, 30 Dec 2025 06:14:03 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The certification was issued after rigorous vehicle-level safety, electrical, performance, and environmental testing, as notified by the Ministry of Road Transport and Highways for certification of battery operated cehicles in the E2W category."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-kills-cloud-first-hybrid-computing-comeback/",
+        "title": "AI killed the cloud-first strategy: Why hybrid computing is the only way forward now",
+        "link": "https://www.zdnet.com/article/ai-kills-cloud-first-hybrid-computing-comeback/",
+        "published": "Tue, 30 Dec 2025 09:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Five years ago, cloud was the answer to everything. With AI, that's no longer so clear."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/india-emerges-as-strategic-long-term-growth-market-amid-asias-ai-and-infrastructure-boom-hsbc-outlook/articleshow/126249048.cms",
+        "title": "India emerges as strategic long-term growth market amid Asia's AI and infrastructure boom: HSBC Outlook",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/india-emerges-as-strategic-long-term-growth-market-amid-asias-ai-and-infrastructure-boom-hsbc-outlook/articleshow/126249048.cms",
+        "published": "Tue, 30 Dec 2025 14:37:43 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India is making waves as a dynamic growth hub in Asia, driven by its strong economic fundamentals and a tech-savvy demographic. The surge in investments in artificial intelligence, renewable energy, and state-of-the-art data centers showcases the country's potential."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/israel-war-prompts-relocation-requests-from-microsoft-intel-nvidia-amazon-meta-and-apple-staff/articleshow/126248676.cms",
+        "title": "Israel war prompts relocation requests from Microsoft, Intel, Nvidia, Amazon, Meta and Apple staff",
+        "link": "https://economictimes.indiatimes.com/tech/technology/israel-war-prompts-relocation-requests-from-microsoft-intel-nvidia-amazon-meta-and-apple-staff/articleshow/126248676.cms",
+        "published": "Tue, 30 Dec 2025 14:20:33 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Employees at major tech firms in Israel are increasingly seeking to relocate abroad, driven by uncertainty after the prolonged war with Hamas, a report said. While the conflict disrupted operations and raised concerns about long-term stability, the sector remains vital to the economy. Many companies continue to show resilience and confidence despite ongoing challenges."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/b2b-seafood-marketplace-captain-fresh-withdraws-ipo-papers/articleshow/126248072.cms",
+        "title": "B2B seafood marketplace Captain Fresh withdraws IPO papers",
+        "link": "https://economictimes.indiatimes.com/tech/startups/b2b-seafood-marketplace-captain-fresh-withdraws-ipo-papers/articleshow/126248072.cms",
+        "published": "Tue, 30 Dec 2025 13:44:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Captain Fresh has pulled its IPO application to prioritise the acquisition of Frime, a leading Spanish tuna producer. This deal features a unique stock-swap element, showcasing Captain Fresh's innovative approach to expansion."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-meity-advisory-social-media-curb-obscene-content/",
+        "title": "MeitY Sends Advisory To Social Media Platforms And Other Intermediaries To Curb \u201cObscene\u201d Content",
+        "link": "https://www.medianama.com/2025/12/223-meity-advisory-social-media-curb-obscene-content/",
+        "published": "Tue, 30 Dec 2025 08:47:27 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>MeitY has issued an advisory asking social media platforms and other intermediaries to curb the hosting and circulation of obscene and unlawful content under existing IT laws. The ministry warned that non-compliance could affect safe harbour protections.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-meity-advisory-social-media-curb-obscene-content/\">MeitY Sends Advisory To Social Media Platforms And Other Intermediaries To Curb \u201cObscene\u201d Content</a> appeared first on <a href="
     }
 ]
