📚 Auto-update: News data refreshed - 2025-12-30 10:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32926,5 +32926,37 @@
         "published": "Tue, 30 Dec 2025 08:47:27 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>MeitY has issued an advisory asking social media platforms and other intermediaries to curb the hosting and circulation of obscene and unlawful content under existing IT laws. The ministry warned that non-compliance could affect safe harbour protections.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-meity-advisory-social-media-curb-obscene-content/\">MeitY Sends Advisory To Social Media Platforms And Other Intermediaries To Curb \u201cObscene\u201d Content</a> appeared first on <a href="
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-ipad-cases-to-protect-your-tablet-130033533.html?src=rss",
+        "title": "The best iPad cases for 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-ipad-cases-to-protect-your-tablet-130033533.html?src=rss",
+        "published": "Tue, 30 Dec 2025 10:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>An iPad is a great all-purpose device, but it also needs protection if you want it to last. A good case can guard against drops, add a stand for videos or sketching sessions and even make your iPad feel more like a lightweight laptop. Whether you prefer something slim, rugged or packed with useful features, there is a case that fits the way you use your tablet.<br /><br />From keyboard folios to minimalist covers with room for your Apple Pencil, we rounded up the best iPad cases that keep you"
+    },
+    {
+        "id": "https://mastodon.neilzone.co.uk/@neil/115807834298031971",
+        "title": "HSBC blocks its app due to F-Droid-installed Bitwarden",
+        "link": "https://mastodon.neilzone.co.uk/@neil/115807834298031971",
+        "published": "Tue, 30 Dec 2025 09:57:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46431453\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/china-mandates-50-domestic-equipment-rule-for-chipmakers-sources-say/articleshow/126249237.cms",
+        "title": "China mandates 50% domestic equipment rule for chipmakers, sources say",
+        "link": "https://economictimes.indiatimes.com/tech/technology/china-mandates-50-domestic-equipment-rule-for-chipmakers-sources-say/articleshow/126249237.cms",
+        "published": "Tue, 30 Dec 2025 14:36:50 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "China is now requiring chipmakers to use over half their equipment from domestic sources for new factories. This move aims to build a self-reliant semiconductor industry. The policy is accelerating the growth of Chinese equipment makers like Naura. Global competitors are watching China's progress closely. This initiative is a significant step towards technological independence."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/httpsyourstorycom202512barabanki-entrepreneur",
+        "title": "From law to teakwood: Barabanki entrepreneur scales a furniture venture",
+        "link": "https://yourstory.com/2025/12/httpsyourstorycom202512barabanki-entrepreneur",
+        "published": "Mon, 29 Dec 2025 19:00:58 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Laxmi Narayan, a former advocate from Barabanki, explains how an interest-free loan which formalise and expand his teakwood furniture startup."
     }
 ]
