📚 Auto-update: News data refreshed - 2025-12-30 11:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32958,5 +32958,93 @@
         "published": "Mon, 29 Dec 2025 19:00:58 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Laxmi Narayan, a former advocate from Barabanki, explains how an interest-free loan which formalise and expand his teakwood furniture startup."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-nuclear-plants/",
+        "title": "The Great Big Power Play",
+        "link": "https://www.wired.com/story/expired-tired-wired-nuclear-plants/",
+        "published": "Tue, 30 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "US support for nuclear energy is soaring. Meanwhile, coal plants are on their way out and electricity-sucking data centers are meeting huge pushback. Welcome to the next front in the energy battle."
+    },
+    {
+        "id": "https://www.wired.com/story/tips-for-keeping-a-digital-diary/",
+        "title": "Tips for Keeping a Digital Diary and Why You Should",
+        "link": "https://www.wired.com/story/tips-for-keeping-a-digital-diary/",
+        "published": "Tue, 30 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "After 10 years of journaling, my only regret is not starting sooner."
+    },
+    {
+        "id": "https://www.wired.com/story/china-to-tax-contraceptives/",
+        "title": "China Will Tax Contraceptives in a Bid to Improve Birth Rates",
+        "link": "https://www.wired.com/story/china-to-tax-contraceptives/",
+        "published": "Tue, 30 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Amid historically low birth rates and economic pressures from its aging population, China will eliminate a decades-old tax exemption on contraceptives."
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/30/1129392/book-reviews-ai-therapy-mental-health/",
+        "title": "The ascent of the AI therapist",
+        "link": "https://www.technologyreview.com/2025/12/30/1129392/book-reviews-ai-therapy-mental-health/",
+        "published": "Tue, 30 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "We\u2019re in the midst of a global mental-\u00adhealth crisis. More than a billion people worldwide suffer from a mental-health condition, according to the World Health Organization. The prevalence of anxiety and depression is growing in many demographics, particularly young people, and suicide is claiming hundreds of thousands of lives globally each year. Given the clear&#8230;"
+    },
+    {
+        "id": "https://opencontent.netflix.com/",
+        "title": "Netflix: Open Content",
+        "link": "https://opencontent.netflix.com/",
+        "published": "Tue, 30 Dec 2025 10:11:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46431560\">Comments</a>"
+    },
+    {
+        "id": "https://lorentz.app/blog-item.html?id=go-shebang",
+        "title": "Go Away Python",
+        "link": "https://lorentz.app/blog-item.html?id=go-shebang",
+        "published": "Tue, 30 Dec 2025 08:50:44 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46431028\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-to-add-1-7-trillion-to-indias-economy-by-2035-govt/articleshow/126251130.cms",
+        "title": "AI to add $1.7 trillion to India's economy by 2035: Govt",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-to-add-1-7-trillion-to-indias-economy-by-2035-govt/articleshow/126251130.cms",
+        "published": "Tue, 30 Dec 2025 16:32:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The economic impact will be driven by AI adoption across sectors including healthcare, agriculture, manufacturing, financial services, education, governance, and climate services, where automation and data-driven decision-making are already improving productivity and service delivery."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/reliance-industries-chairman-mukesh-ambani-unveils-ai-manifesto-for-reliance/articleshow/126249867.cms",
+        "title": "Reliance Industries chairman Mukesh Ambani unveils AI manifesto; targets 10x productivity boost",
+        "link": "https://economictimes.indiatimes.com/tech/technology/reliance-industries-chairman-mukesh-ambani-unveils-ai-manifesto-for-reliance/articleshow/126249867.cms",
+        "published": "Tue, 30 Dec 2025 15:25:47 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Reliance Industries chairman Mukesh Ambani unveiled a draft Reliance AI Manifesto, outlining an ambitious plan to transform the conglomerate into an AI-native deep-tech enterprise while driving a tenfold improvement in productivity for over 6 lakh employees and a 10x impact on India's economy and society."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/mapmyindia-mappls-adds-metro-rail-and-bus-routes-to-navigation-app/articleshow/126249857.cms",
+        "title": "MapmyIndia Mappls adds metro, rail, and bus routes to navigation app",
+        "link": "https://economictimes.indiatimes.com/tech/technology/mapmyindia-mappls-adds-metro-rail-and-bus-routes-to-navigation-app/articleshow/126249857.cms",
+        "published": "Tue, 30 Dec 2025 15:25:18 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "According to a press release from MapmyIndia Mappls, the app helps commuters find stations, stops, and interchange options to plan their daily travels more effectively."
+    },
+    {
+        "id": "https://inc42.com/features/rebel-foods-in-2025-cloud-kitchen-giant-simmers-down-before-ipo-push/",
+        "title": "Rebel Foods In 2025: Cloud Kitchen Giant Simmers Down Before IPO Push",
+        "link": "https://inc42.com/features/rebel-foods-in-2025-cloud-kitchen-giant-simmers-down-before-ipo-push/",
+        "published": "Tue, 30 Dec 2025 04:30:46 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Rebel Foods In 2025: Cloud Kitchen Giant Simmers Down Before IPO Push\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-3-4.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />Rebel Foods found itself in strange territory this year \u2014 having to play catch-up. It was catching up with quick&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-flipkart-flying-machine-stake-rs-135-cr-ipo-push/",
+        "title": "Flipkart to Sell Entire Stake in Flying Machine Parent for Rs 135 Crore",
+        "link": "https://www.medianama.com/2025/12/223-flipkart-flying-machine-stake-rs-135-cr-ipo-push/",
+        "published": "Tue, 30 Dec 2025 10:27:11 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>After selling off its 6% stake in Aditya Birla Lifestyle for Rs 998 crore and BlackBuck, Flipkart is now selling his 31.25% stake in Arvind Youth Brands parent, Flying Machine for its IPO push. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-flipkart-flying-machine-stake-rs-135-cr-ipo-push/\">Flipkart to Sell Entire Stake in Flying Machine Parent for Rs 135 Crore</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
