--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -33046,5 +33046,77 @@
         "published": "Tue, 30 Dec 2025 10:27:11 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>After selling off its 6% stake in Aditya Birla Lifestyle for Rs 998 crore and BlackBuck, Flipkart is now selling his 31.25% stake in Arvind Youth Brands parent, Flying Machine for its IPO push. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-flipkart-flying-machine-stake-rs-135-cr-ipo-push/\">Flipkart to Sell Entire Stake in Flying Machine Parent for Rs 135 Crore</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/what-is-a-preamp-and-do-i-really-need-one/",
+        "title": "What Is a Preamp, and Do I Really Need One?",
+        "link": "https://www.wired.com/story/what-is-a-preamp-and-do-i-really-need-one/",
+        "published": "Tue, 30 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "If you've wondered what a preamplifier is, what it exactly does, and whether your audio setup is missing one, we've got the answers\u2014as well as some of our top recommendations."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-smart-notebooks-and-smart-pens/",
+        "title": "7 Best Digital Notebooks (2026): reMarkable, Kobo, Kindle",
+        "link": "https://www.wired.com/gallery/best-smart-notebooks-and-smart-pens/",
+        "published": "Tue, 30 Dec 2025 11:38:00 +0000",
+        "source": "WIRED",
+        "summary": "These nifty tools combine the ease of jotting notes by hand with the power of saving them digitally."
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121511445.html?src=rss",
+        "title": "The Morning After: What to expect at CES 2026",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121511445.html?src=rss",
+        "published": "Tue, 30 Dec 2025 12:15:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>CES 2026 is <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html\">right around the corner</a>, and the pre-show hype cycle/ early reveals suggest, yes, there\u2019s going to be an awful lot of AI-powered insert-product-category-here alongside, thankfully, some major announcements from the likes of Intel, Sony and NVIDIA.</p>\n<p>Intel is finally unveiling its Panther Lake (Core Ultra Series 3) chips. The first chips built on Inte"
+    },
+    {
+        "id": "https://nonzerosum.games/",
+        "title": "Non-Zero-Sum Games",
+        "link": "https://nonzerosum.games/",
+        "published": "Tue, 30 Dec 2025 11:42:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46432311\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/us-tech-firm-sues-acquisition-adviser-for-driving-a-deal-for-fees-publicity/articleshow/126251949.cms",
+        "title": "US tech firm sues acquisition adviser for driving a deal for fees &amp; publicity",
+        "link": "https://economictimes.indiatimes.com/tech/technology/us-tech-firm-sues-acquisition-adviser-for-driving-a-deal-for-fees-publicity/articleshow/126251949.cms",
+        "published": "Tue, 30 Dec 2025 17:20:02 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "SmarTek21, a long-established technology consulting company, accused TGP GP Management of carrying out \u201cegregiously defective due diligence\u201d in connection with the purchase of IT Avalon in May 2025."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/hdfc-tech-innovators-2025-spotlights-12-startups-shaping-indias-future",
+        "title": "HDFC Tech Innovators 2025 spotlights 12 startups shaping India\u2019s future",
+        "link": "https://yourstory.com/2025/12/hdfc-tech-innovators-2025-spotlights-12-startups-shaping-indias-future",
+        "published": "Tue, 30 Dec 2025 11:26:46 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The 4th edition of HDFC Tech Innovators concluded with the top 10 innovators and 2 emerging women founders being felicitated at the Grand Finale in Mumbai on December 3, 2025."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/growing-smbs-learned-lenovos-ai-pc-webinar",
+        "title": "What growing SMBs learned from Lenovo\u2019s AI PC webinar",
+        "link": "https://yourstory.com/2025/12/growing-smbs-learned-lenovos-ai-pc-webinar",
+        "published": "Tue, 30 Dec 2025 11:41:18 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The webinar explored how AI-powered PCs are helping SMBs cut downtime, boost productivity, and unlock enterprise-grade capabilities without enterprise-level complexity."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-india-ai-copyright-nasscom-ai-text-data-mining-exemption/",
+        "title": "How Tech companies see India\u2019s AI Copyright Licensing Plan: Decoding NASSCOM\u2019s dissent",
+        "link": "https://www.medianama.com/2025/12/223-india-ai-copyright-nasscom-ai-text-data-mining-exemption/",
+        "published": "Tue, 30 Dec 2025 12:13:25 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>NASSCOM has backed text and data mining exemptions for AI training in India, arguing that the process amounts to a technical use of copyrighted material. The proposal has reignited debate over creator consent and compensation.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-india-ai-copyright-nasscom-ai-text-data-mining-exemption/\">How Tech companies see India&#8217;s AI Copyright Licensing Plan: Decoding NASSCOM&#8217;s dissent</a> appeared first on <a href=\"https://www.median"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-explained-zepto-checkout-design-flouting-mrp-dark-pattern-rules-ccpa-probe/",
+        "title": "Explained: Why Zepto\u2019s Checkout Design Was Found Flouting MRP and Dark Pattern Rules In CCPA Probe",
+        "link": "https://www.medianama.com/2025/12/223-explained-zepto-checkout-design-flouting-mrp-dark-pattern-rules-ccpa-probe/",
+        "published": "Tue, 30 Dec 2025 11:54:16 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Central Consumer Protection Authority (CCPA) has found Zepto violating MRP and dark patterns rules. Read on to know how the consumer protection authority brought in MRP-related violations.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-explained-zepto-checkout-design-flouting-mrp-dark-pattern-rules-ccpa-probe/\">Explained: Why Zepto\u2019s Checkout Design Was Found Flouting MRP and Dark Pattern Rules In CCPA Probe</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANA"
     }
 ]
